# terminusdb-client-python

./: .buildinfo  .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  Contributing.md  Errors_and_Exceptions.html  Pipfile  README.md  RELEASE_NOTES.md  Readme.md  Scaffolding_CLI_Tool.html  SmartQuery.html  genindex.html  index.html  install.txt  installation.html  main.py  makefile  modules.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  tutorials.html  woqlClient.html  woqlDataframe.html  woqlLib.html  (+5 more)
.github/: insert_docs.py  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  issue.yml  python.yml
_sources/: SmartQuery.rst.txt  installation.rst.txt  modules.rst.txt  tutorials.rst.txt  woqlClient.rst.txt  woqlSchema.rst.txt  woqlpy.rst.txt
_static/: documentation_options.js
canary/: genindex.html  index.html  modules.html  woqlClient.html  woqlView.html
dev/: .buildinfo  Errors_and_Exceptions.html  Scaffolding_CLI_Tool.html  SmartQuery.html  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html  woqlClient.html  woqlDataframe.html  woqlLib.html  woqlQuery.html  woqlView.html
dev/_sources/: index.rst.txt  modules.rst.txt
docker/: Dockerfile  README.md  run.sh
docs/: KNOWN_ISSUES_AND_UNCOVERED_CODE.md  generateGitbookMD.py  release_steps.md  requirements.txt
docs/howto/: Create_A_Schema.md  Create_A_Schema.rst
docs/source/: Scaffolding_CLI_Tool.rst  conf.py  index.rst  installation.rst  modules.rst  terminusdb_client.client.rst  terminusdb_client.rst  terminusdb_client.schema.rst  terminusdb_client.scripts.rst  terminusdb_client.tests.integration_tests.rst  terminusdb_client.tests.rst  terminusdb_client.tests.woqljson.rst  terminusdb_client.woqlclient.rst  terminusdb_client.woqldataframe.rst  terminusdb_client.woqlquery.rst  terminusdb_client.woqlschema.rst  woqlClient.rst  woqlDataframe.rst  woqlLib.rst  woqlQuery.rst  woqlclient.rst
docs/tutorials/: README.md
master/: .buildinfo  Scaffolding_CLI_Tool.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html  woqlClient.html  woqlDataframe.html  woqlQuery.html  woqlSchema.html  woqlView.html
master/_sources/: Errors_and_Exceptions.rst.txt  Scaffolding_CLI_Tool.rst.txt  index.rst.txt  installation.rst.txt  woqlClient.rst.txt  woqlQuery.rst.txt  woqlView.rst.txt
master/_static/: documentation_options.js
src/: Readme.md  main.py  makefile  pytest.ini  setup.py
src/tests/: __init__.py  capabilitiesResponse.json  connectionDictionary.json  getAllClassDocument.json  getAllClassQuery.json  getSchemaTurtleResponse.txt  mockResponse.py  test_connectinCapabilities.py  test_connectionConfig.py  test_dispatchRequest.py  test_idParser.py  test_woqlClient.py
src/woql_client_p.egg-info/: PKG-INFO  SOURCES.txt
src/woqlclient/: __init__.py  __version__.py  connectionCapabilities.py  connectionConfig.py  const.py  createDatabaseTemplate.py  dispatchRequest.py  documentTemplate.py  errorMessage.py  idParser.py  test.py  utils.py  woqlClient.py
terminus-client-python-test/my_sum/: __init__.py
terminus-client-python-test/tests/: log.py  testReturns.py  test_connect.py  test_createDatabase.py  test_createDocument.py  test_deleteDatabase.py  test_getDocument.py  test_getSchema.py
terminus_client_python.egg-info/: PKG-INFO  SOURCES.txt
terminusdb/: __init__.py
terminusdb/client/: __init__.py
terminusdb/query_syntax/: __init__.py
terminusdb/schema/: __init__.py
terminusdb_client/: __init__.py  __version__.py  connectionCapabilities.py  dispatchRequest.py  errors.py  woql_type.py  woql_utils.py
terminusdb_client/client/: Client.py  __init__.py
terminusdb_client/query_syntax/: __init__.py  query_syntax.py
tests/: AllServerRecords.py  ConnectionDump.py  DBRecord.py  capabilitiesResponseNoAllAction.json  connectCapabilitiesResponse.py  connectResponseForCapabilities.py  connectionDictionary.json  connectionObj.py  connectionObjDump.json  connectionObjDump.py  mockResponse.py  serverRecordsFromCap.py  test_connectinCapabilities.py  test_connectionCapabilities.py  test_connectionConfig.py  test_dispatchRequest.py  test_idParser.py  test_woql.py  test_woqlClient.py  test_woqlDataFrame.py  test_woqlQuery.py
woqlclient/: __init__.py  __version__.py  api_endpoint_const.py  connectionCapabilities.py  connectionConfig.py  dispatchRequest.py  documentTemplate.py  errorMessage.py  errors.py  idParser.py  utils.py  woql.py  woqlClient.py  woqlDataframe.py  woql_utils.py
(+187 files in other folders)
