[tool.poetry]
name = "terminusdb"
version = "12.0.3"
description = "Terminus DB Python client"
authors = ["TerminusDB group", "DFRNT AB"]
license = "Apache Software License"
readme = "README.md"
packages = [
    {include = "terminusdb_client"},
    {include = "terminusdb"},
]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.13"
requests = "^2.31.0"
numpy = ">= 1.13.0"
numpydoc = "*"
pandas = ">= 0.23.0"
typeguard = "^4.0.0"
tqdm = "*"
click = ">=8.0"
shed = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">= 3"
pytest-cov = "*"
pytest-mock = "*"
pytest-xdist = "*"
flake8 = "*"
sphinx-rtd-theme = "^3.0.2"
sphinx-autodoc-typehints = "^2.0"
sphinx-click = "^5.0"
numpydoc = "^1.5"

[tool.poetry.scripts]
tdbpy = "terminusdb_client.scripts.scripts:tdbpy"
dev = "terminusdb_client.scripts.dev:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = [ "./terminusdb_client" ]

[tool.pydoc-markdown.renderer]
type = "gitbook"

[tool.pytest.ini_options]
addopts = [
    "-p no:warnings",
    "--doctest-modules",
    "--import-mode=importlib",
]
doctest_optionflags = [
   "NORMALIZE_WHITESPACE",
   "ELLIPSIS"
]
junit_family="legacy"
testpaths = [
   "terminusdb_client/tests/",
]
[tool.coverage.run]
omit = [
    "terminusdb_client/scripts/dev.py",
    "*/__main__.py",
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88
