[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[isort]
default_section = THIRDPARTY
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
combine_as_imports = True
line_length = 88

[coverage:run]
omit = */test*, */__init__.py, */__version__.py
source = terminusdb_client
